p2/app1.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          volumeMounts:
            - name: app1
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app1
          configMap:
            name: app1
